# IRONSmith

./: README.md
Example_Designs/MLP.ironsmith/codegen/: MLP.graphml  MLP_complete.xml  MLP_gui.xml  Makefile  example_Makefile  example_jit_MLP.py  generated_MLP.py
Example_Designs/MLP.ironsmith/codegen/kernels/: relu.cc  softmax_i16.cc
Example_Designs/MLP_updated.ironsmith/codegen/: MLP_updated.graphml  MLP_updated_complete.xml  MLP_updated_gui.xml  Makefile  generated_MLP_updated.py
cmake/: FindQScintilla.cmake  IRONSmithAPI.cmake
packaging/: .gitignore  build_installer.ps1  bundle_python.ps1  ironsmith.iss
resources/kernels/softmax_bf16/: kernel.json
src/: CMakeLists.txt
src/aiecad_compiler/codegen/backends/: CodeGenerator.py
src/aiecad_compiler/extension/: CodeGeneratorExtender.py
src/aiecad_compiler/graph_builder/: XMLGenerator.py
src/aiecad_compiler/hlir/: builder.py  gui_serializer.py
src/libs/code_gen_bridge/: CMakeLists.txt  CodeGenBridge.cpp
src/libs/hlir_cpp_bridge/: CMakeLists.txt  HlirBridge.cpp  HlirBridge.hpp
src/libs/hlir_cpp_bridge/python/: hlir_bridge_wrapper.py
src/plugins/aieplugin/: AiePlugin.Runtime.cpp  AiePlugin.Ui.cpp  AiePlugin.cpp  CMakeLists.txt  HlirSyncService.cpp  NpuProfileCanvasMapper.hpp  NpuProfileLoader.hpp
src/plugins/aieplugin/design/: DesignState.hpp  DesignStateCanvas.cpp  DesignStateJson.cpp
src/plugins/aieplugin/hlir_sync/: AieOutputLog.hpp  DesignVerifier.cpp  DesignVerifier.hpp  HlirDirectExecution.cpp  HlirSyncService.cpp  HlirSyncService.hpp  TileFifoInfo.cpp  TileFifoInfo.hpp
src/plugins/aieplugin/kernels/: KernelAssignmentController.cpp  KernelCatalog.cpp  KernelCatalog.hpp  KernelRegistryService.hpp
src/plugins/aieplugin/panels/: AieKernelsPanel.cpp  AieKernelsPanel.hpp  AieLogPanel.cpp  AieLogPanel.hpp  AiePropertiesPanel.cpp  AiePropertiesPanel.hpp
src/plugins/aieplugin/state/: AieKernelsPanelState.hpp  AieSidebarState.hpp  AieWorkspaceState.hpp
src/plugins/aieplugin/symbol_table/: SymbolTableTypes.cpp  SymbolTableTypes.hpp  SymbolsController.cpp  SymbolsController.hpp  SymbolsModel.cpp  SymbolsPanel.cpp  SymbolsPanel.hpp  TapPreviewWidget.cpp  TapPreviewWidget.hpp
src/plugins/aieplugin/tests/: CMakeLists.txt  SymbolsControllerTests.cpp  SymbolsPanelTests.cpp
src/plugins/canvas/: CMakeLists.txt  CanvasBlock.cpp  CanvasBlock.hpp  CanvasController.cpp  CanvasController.hpp  CanvasDocument.cpp  CanvasScene.cpp  CanvasView.cpp  CanvasView.hpp  CanvasWire.cpp  CanvasWire.hpp
src/plugins/canvas/api/: CanvasDocumentTypes.hpp
src/plugins/canvas/controllers/: CanvasLinkingController.cpp  CanvasLinkingController.hpp
src/plugins/canvas/document/: CanvasDocumentJsonSerializer.cpp  CanvasDocumentServiceImpl.hpp
src/plugins/canvas/internal/: CanvasHostImpl.cpp
src/plugins/canvas/tests/: CanvasDocumentServiceTests.cpp
src/plugins/codeeditor/: CMakeLists.txt  CodeEditorTextView.hpp
src/plugins/codeeditor/api/: CodeEditorTypes.hpp
src/plugins/codeeditor/internal/: CodeEditorServiceImpl.hpp
src/plugins/codeeditor/state/: CodeEditorWorkspaceState.hpp
src/plugins/core/: CorePlugin.cpp
src/plugins/core/ui/: CoreUi.qrc  Default.qss
src/plugins/core/widgets/: ToolRailWidget.cpp
tests/hlir_bridge/output/: generated_add_activate_test.py  generated_dual_path_forward_test.py  generated_matrix_vector_mul_test.py  generated_passthrough_test.py  generated_vector_exp_test.py  generated_vector_vector_mul_test.py
